samples/_failures_safe/1761175838_122b7b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1f715f60.c: In function ‘main’:
./samples/SAFE/__tmp_1f715f60.c:162:17: error: expected declaration or statement at end of input
  162 |                 if (status == 1) {
      |                 ^~
./samples/SAFE/__tmp_1f715f60.c:162:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1f715f60.c:162:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1f715f60.c:162:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1f715f60.c:162:17: error: expected declaration or statement at end of input
